--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "antd": "^4.15.4",
     "bootstrap": "^5.0.0",
     "framer-motion": "^4.1.11",
+    "locomotive-scroll": "^4.1.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
