--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
+    "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scrollspy": "^3.4.3",
