--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.5.5",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
-    "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scrollspy": "^3.4.3",
