--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scrollspy": "^3.4.3",
+    "react-stepper-horizontal": "^1.0.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
