--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
-    "react": "^17.0.2",
+    "react": "next",
     "react-bootstrap": "^1.5.2",
     "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "next",
     "react-number-format": "^4.5.5",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
