--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "next",
     "react-bootstrap": "^1.5.2",
     "react-cookie": "^4.0.3",
+    "react-cookies": "^0.1.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "next",
+    "react-google-recaptcha": "^2.1.0",
+    "react-input-switch": "^2.2.2",
     "react-number-format": "^4.5.5",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
-    "react-scrollspy": "^3.4.3",
-    "react-stepper-horizontal": "^1.0.11",
-    "prop-types": "^15.7.2",
-    "react-cookies": "^0.1.1",
-    "react-copy-to-clipboard": "^5.0.3",
-    "react-input-switch": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scrollspy": "^3.4.3",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.0.1"
   },
