--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "ckeditor4-react": "^1.4.2",
     "moment-timezone": "^0.5.33",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
